fix preview images

--- a/src/index.html
+++ b/src/index.html
@@ -49,17 +49,17 @@ title: HomePage
                     <div class="basket--preview">
                         <div>
                             <div>
-                                <img src="/assets/img/screwdriver.jpg" alt="screwdriver">
+                                <img src="assets/img/screwdriver.jpg" alt="screwdriver">
                             </div>
                         </div>
                         <div>
                             <div>
-                                <img src="/assets/img/small_screwdriver.jpg" alt="small_screwdriver">
+                                <img src="assets/img/small_screwdriver.jpg" alt="small_screwdriver">
                             </div>
                         </div>
                         <div>
                             <div>
-                                <img src="/assets/img/drill.jpg" alt="drill">
+                                <img src="assets/img/drill.jpg" alt="drill">
                             </div>
                         </div>
 
